talos/config/talos/kyverno/clusterPolicy-injectcert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-vault-root-cert
spec:
  rules:
    - name: add-vault-root-cert
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - kargo
          selector:
            matchLabels:
              app.kubernetes.io/instance: kargo
              app.kubernetes.io/name: kargo
      skipBackgroundRequests: true
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              cert-injection.fredcorp.com/injected: "true"
          spec:
            volumes:
              - name: fredcorp-pki-certs
                configMap:
                  name: fredcorp-pki-certs
                  items:
                    - key: vault-pki-certs.pem
                      path: vault-pki-certs.pem
            containers:
              - (name): "*"
                volumeMounts:
                  - name: fredcorp-pki-certs
                    mountPath: /etc/ssl/certs/vault-pki-certs.pem
                    subPath: vault-pki-certs.pem
                    readOnly: true


# apiVersion: kyverno.io/v1
# kind: ClusterPolicy
# metadata:
#   name: add-vault-root-cert
# spec:
#   rules:
#     - name: add-vault-root-cert
#       match:
#         resources:
#           kinds:
#             - Pod
#           namespaces:
#             - kargo
#           selector:
#             matchLabels:
#               app.kubernetes.io/instance: kargo
#               app.kubernetes.io/name: kargo
#       skipBackgroundRequests: true
#       mutate:
#         patchStrategicMerge:
#           metadata:
#             annotations:
#               cert-injection.fredcorp.com/injected: "true"
#           spec:
#             volumes:
#               - name: fredcorp-pki-certs
#                 configMap:
#                   name: fredcorp-pki-certs
#                   items:
#                   - key: vault-pki-certs.pem
#                     path: vault-pki-certs.pem
#             containers:
#               - (name): "*"
#                 command:
#                   - /bin/sh
#                   - -c
#                   - |
#                     cp /tmp/vault-pki-certs.pem /etc/ssl/certs
#                     update-ca-certificates &&
#                     /usr/local/bin/kargo controller
#                 volumeMounts:
#                   - name: fredcorp-pki-certs
#                     mountPath: /tmp
#                     readOnly: true
#                     # subPath: vault-pki-certs.pem
